# eez_studio_test

./: 9.0_lv_conf.h  CMakeLists.txt  README.md  __CMakeLists.txt  all_font.txt  build.sh  conanfile.txt  confdef.txt  install.sh  lv_conf.h  main.c  test.eez-project  test.eez-project-ui-state
profiles/: t113
src/ui/: CMakeLists.txt  fonts.h  images.c  images.h  lottie.h  lv_lottie_data.c  screens.c  screens.h  ui.c  ui.h  ui_font_dict.c  ui_image_junray.c  vars.h
